# openCl

./: CMakeLists.txt  README.md  function.txt  function_matrix.cl  function_pref_sum.cl  utils.h
MatrixCL/: CMakeLists.txt  main.cpp
OpenCL/: CMakeLists.txt  main.cpp
OpenMP/: CMakeLists.txt  main.cpp
PrefSumCL/: CMakeLists.txt  function_pref_sum.cl  main.cpp
